# surface-modeling

./: .gitignore  README.md
base_projets/: CMakeLists.txt  OFFtoData.py  bruit.py  cropFile.py  example.txt  visu.py  visuAnim.py  visuPlanes.py
base_projets/data/: bear.data  bone.data  bunny.data  cactus3337.data  cat10_10000.data  chat.data  cubamid.data  cube_closed.data  cylindre.data  eight.data  half_cylindre.data  max.data  pipes_round.data  pipes_squared.data  screwdriver.data  sphere.data  sphere_bruitee.data  sphere_piece.data  test.data  tetrahedron_2.data  thing_rounded.data  thing_squared.data  triceratops.data
base_projets/src/: .cproject  .project  AbstractMesh.cpp  Contour_Tracing.h  DataSet.cpp  DataSet.h  Graph.cpp  Graph.h  ImplicitFunction.cpp  ImplicitFunction.h  Mesh.cpp  Mesh.h  MeshHE.cpp  Object.cpp  Object.h  Plane.cpp  Plane.h  main.cpp  main.cppold  main_old.cpp  shader.cpp  visuCloud.cpp
